# HouseholdBasketEnv

./: BLOG.md  HACKATHON_GUIDELINES_REPORT.md  README.md
household_basket_env/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
household_basket_env/notebooks/: baseline_eval.ipynb  eval_and_plots-albation_a.py  eval_and_plots-albation_b.ipynb  eval_and_plots-albation_b.py  eval_and_plots-albation_c.py  eval_and_plots.ipynb  training-ablation2.ipynb  training.ipynb  training.py  training1.py  training2.py
household_basket_env/notebooks/results/: baseline.json  eval_ablation_a.json  eval_main.json  qualitative_ablation_a.json  qualitative_main.json
household_basket_env/notebooks/runs/ablation_a/: README.md  run_config.json  (+1 more)
household_basket_env/notebooks/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
household_basket_env/scripts/: push_to_hf.sh  train_grpo.py
household_basket_env/seeds/: verified_task1.json  verified_task2.json  verified_task3.json
household_basket_env/server/: __init__.py  app.py  basket_grader.py  catalog.py  curriculum.py  environment.py  household_fixtures.py  requirements.txt  rewards.py  seed_verifier.py
household_basket_env/tests/: conftest.py  test_basket_grader.py  test_env_contract.py  test_reward_hacks.py  test_rewards.py  test_seed_verifier.py
(+17 files in other folders)
